packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/eapi/mismatched/mismatched-8.ebuild
EAPI=8
EAPI=7
DESCRIPTION="ebuild with mismatched sourced and parsed EAPIs"
SLOT=0
